# karinca_one

./: CMakeLists.txt  README.md  package.xml
config/: my_controllers.yaml
description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_robot.launch.py  rsp.launch.py
